xine-lib (1-beta8)
  * fix DVD highlight problems
	
xine-lib (1-beta7)
  * libdvdnav updated to 0.1.6cvs: fixes a whole class of problems caused
    by dvdnav being a bit ahead in the stream due to xine's fifos
  * libdvdread updated to 0.9.4
  * streaming of avi files (e.g. via http)
  * experimental TiVo-like functionality using WinTV-PVR cards (pvr plugin)
  * rtp input updated to latest API, and rewritten to handle arbitrary
    packet sizes, and both real RTP packets and a stream sent as raw UDP
    packets (common in IP-TV).  RTP packet parsing not tested, and does
    not handle sequence counter.  There's also a deadlock in many demuxers
    when trying to stop during a network timeout, xine has to be SIGKILLED
    in this case.
  * dvaudio support
  * stdin plugin fix (pause engine when there is no data available)
  * .rm file reference handling bugfxi
  * mute console output unless XINE_PARAM_VERBOSE is set
	
xine-lib (1-beta6)
  * inform the width and height for the v4l input plugin
  * ffmpeg aspect ratio detection code fixed
  * demux_ogg arm patch by dilb
  * memleak fixes by ewald snel
  * plugin loader segfault fix
  * fb configure check fixed
	
xine-lib (1-beta5)
  * new AV sync strategy (audio resample) for DXR3 users
  * improved fb driver with zero copy
  * fix the v4l plugin for lower resolution devices (webcam)
  * nvtv bugfixes
  * network code bugfixes (again long wait for some streams)
  * fix flac content detection (caused trouble to other demuxers)
  * OSS driver fixes (for cards using GETOPTR sync method)
  * fixed gnome-vfs plugin to be used for remote locations (other than http)
  * at least for DVD input, the language reporting is now channel-aware
  * CD-ROM/XA ADPCM decoder
  * QT demuxer fixes to select among multiple A/V traks and support 
    non- and poorly-interleaved files 
  * support for the css title key cache in the latest versions of a well
    known css decryption library