@@ -1,3 +1,7 @@
+xine-lib (1-beta9)
+  * implement XINE_PARAM_AUDIO_AMP_LEVEL so xine's volume can be
+    set independantly from other applications
+
 xine-lib (1-beta8)
   * fix DVD highlight problems
 	
